# projEA872

./: .gitignore  CMakeLists.txt  Capivara-mola  README.md  mma com mvc
art/: placeholder.txt
include/: Caixa.h  Carro.h  Controller.h  Model.h  View.h
monitor/include/: Model.h  View.h
monitor/src/: Carro.cpp
sdl/: tutorial.cpp
src/: Caixa.cpp  Carro.cpp  Controller.cpp  Model.cpp  View.cpp  main.cpp  placeholder.txt  tutorial.cpp
